# ircd

./: CMakeLists.txt  config.hpp  config.yaml  logger.hpp  main.cpp
